# Fleet-Intervention-System-for-Autonomous-Vehicles

./: .env.example  .gitignore  DEMO.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.cursor/plans/: fleetops_implementation_plan_59a8f33e.plan.md
docs/: PHASE0.md  PHASE1.md  PHASE2.md  PHASE3.md  architecture.md  demo_script.md  kafka_schemas.md
scripts/: CHECK4_INSTRUCTIONS.md  VERIFICATION_RESULTS.md  calibrate_thresholds.py  capture_kafka_events.py  check4_anomalies.py  check_1_thresholds.py  check_infrastructure.py  compare_determinism.py  download_dataset.md  inspect_l5kit.py  list_candidate_scenes.py  run_all_checks.sh  run_demo.sh  run_determinism_test.sh  seed_golden_scenes.py  setup_dataset.sh  start_all.sh  test_check1.py  verify_anomaly_service.py  verify_check1_startup.py
services/: __init__.py  id_generator.py
services/anomaly-service/: __init__.py  config.py  kafka_consumer.py  kafka_producer.py  main.py
services/anomaly-service/anomalies/: __init__.py  detectors.py  rules.py  severity.py
services/anomaly-service/config/: __init__.py  thresholds.json  (+2 more)
services/operator-service/: __init__.py  alembic.ini  config.py  kafka_consumer.py  kafka_producer.py  main.py
services/replay-service/: __init__.py  config.py  kafka_producer.py  main.py
services/schemas/: __init__.py  events.py
tests/integration/: test_kafka_flow.py
tests/unit/: test_anomalies.py  test_features.py  test_replay.py
ui/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
ui/src/: App.tsx  index.css  main.tsx
(+53 files in other folders)
