[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-fleet-response-system"
version = "0.1.0"
description = "Autonomous Fleet Response System"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = []

[tool.setuptools.packages.find]
where = ["."]
include = ["services*"]

